[gd_scene load_steps=11 format=3 uid="uid://fkrslh3yc2wr"]

[ext_resource type="Texture2D" uid="uid://cft5awshju13" path="res://Sprites/Buttons/GreyPlay.png" id="1_fr46p"]
[ext_resource type="Script" path="res://Scenes/UI/in_game_ui.gd" id="1_qgqrn"]
[ext_resource type="Texture2D" uid="uid://b1t2psius2bc5" path="res://Sprites/Buttons/GreyPause.png" id="2_2lst6"]
[ext_resource type="Texture2D" uid="uid://bwdnodle50wcr" path="res://Sprites/Buttons/Exit.png" id="2_8gv3h"]
[ext_resource type="Texture2D" uid="uid://k7m2s644slwf" path="res://Sprites/Buttons/ExitPressed.png" id="3_lo186"]
[ext_resource type="Texture2D" uid="uid://bbtwyflvr715r" path="res://Sprites/Buttons/FastForward.png" id="4_2b23o"]
[ext_resource type="Texture2D" uid="uid://6mhvp0l72y51" path="res://Sprites/Buttons/FastForwardPressed.png" id="5_a1rij"]
[ext_resource type="Texture2D" uid="uid://clv28ge1dxhce" path="res://Sprites/Buttons/GreybuttonEmptyPressed.png" id="6_u2w5w"]
[ext_resource type="Texture2D" uid="uid://bv6gbom2cs0b7" path="res://Sprites/Turrets/turret_FACE - Copy.png" id="7_ufib3"]
[ext_resource type="Texture2D" uid="uid://dph2wyw7lp4e1" path="res://Sprites/Turrets/turret_FACE_blue.png" id="8_e7ohq"]

[node name="In game UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qgqrn")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(70, 550)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
alignment = 1

[node name="PlayPause" type="TextureButton" parent="MarginContainer/VBoxContainer"]
process_mode = 3
texture_filter = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("1_fr46p")
texture_pressed = ExtResource("2_2lst6")
stretch_mode = 5

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 7)
layout_mode = 2

[node name="FastForward" type="TextureButton" parent="MarginContainer/VBoxContainer"]
process_mode = 3
texture_filter = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("4_2b23o")
texture_pressed = ExtResource("5_a1rij")
stretch_mode = 5

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
z_index = 4
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RedTurret" type="TextureButton" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("6_u2w5w")
stretch_mode = 5

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer/RedTurret"]
position = Vector2(50, 50)
scale = Vector2(2, 2)
texture = ExtResource("7_ufib3")
vframes = 10

[node name="BlueTurret" type="TextureButton" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("6_u2w5w")
stretch_mode = 5

[node name="Sprite2D3" type="Sprite2D" parent="MarginContainer/VBoxContainer/BlueTurret"]
position = Vector2(47, 51)
scale = Vector2(2, 2)
texture = ExtResource("8_e7ohq")
vframes = 10

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
process_mode = 3
texture_filter = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
toggle_mode = true
texture_normal = ExtResource("2_8gv3h")
texture_pressed = ExtResource("3_lo186")
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayPause" to="." method="_on_play_pause_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FastForward" to="." method="_on_fast_forward_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RedTurret" to="." method="_on_red_turret_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BlueTurret" to="." method="_on_blue_turret_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
